test/data/valid-messages/simplest.message
## simplest possible valid message

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
